--- a/legal.html
+++ b/legal.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en" dir="ltr">
 
 <head>
-  <title>Legal Notice | Firstview Lettings Ltd.</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Firstview Lettings Ltd Legal Notice and Privacy Police.">
   <meta name="author" content="Firstview Lettings">
   <meta name="copyright" content="Firstview Lettings Ltd">
   <meta charset="utf-8">
-  <link href="stylesheets/firstview-lettings.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+  <link href="stylesheets/firstview-lettings.min.css" rel="stylesheet" type="text/css">
+  <title>Legal Notice | Firstview Lettings Ltd.</title>
+  <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
 </head>
 
 <body>
   <div class="wrap">
     <div class="cookie-container">
-    <p>
-      We use cookies in this website for tracking and performance purposes. To find out more, read our
-      <a href="legal.html">privacy policy</a>. By using this site you agree to the use of cookies.
-    </p>
-
-    <button class="cookie-btn">
-      I accept
-    </button>
-  </div>
-    <header style="display:flex">
-      <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
+      <p>
+        We use cookies in this website for tracking and performance purposes. To find out more, read our
+        <a href="legal.html">Legal Notices</a>. By continuing to use this site you consent to the use of cookies.
+      </p>
+      <button class="cookie-btn">
+        I accept
+      </button>
+    </div>
+    <header>
+      <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt="main logo"></a>
       </div>
-        <nav class="nav flex-row flex-sm-row">
-          <a  class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
-          <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
+      <nav class="nav flex-row flex-sm-row">
+        <a id="home" class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
+        <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
 
-          <div class="btn-group" id="tenants">
-            <a role="button" type="button" class="btn" href="tenant-services.html">Tenants</a>
-            <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="btn-group" id="tenants">
+          <a role="button" class="btn" href="tenant-services.html">Tenants</a>
+          <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="tenancy_application.html">Tenancy Applications</a>
               <a class="dropdown-item" href="tenant-enquiries.html">Tenant Enquiries</a>
             </div> -->
-          </div>
-          <div class="btn-group" id="landlords">
-            <a role="button" type="button" class="btn" href="landlord-services.html">Landlords</a>
-            <!-- <a role="button" type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        </div>
+        <div class="btn-group" id="landlords">
+          <a role="button" class="btn" href="landlord-services.html">Landlords</a>
+          <!-- <a role="button" type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
@@ -55,22 +54,23 @@
               <a class="dropdown-item" href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a>
               <a class="dropdown-item" href="letting-management.html">Letting Management Service</a>
             </div> -->
-            </div>
-            <div class="dropdown">
-            <button class="btn dropdown-toggle " type="button" id="services-tab" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Menu  &#9776;
-            </button>
-            <div class="dropdown-menu" aria-labelledby="services-tab">
-              <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
-              <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
-              <a class="dropdown-item" href="properties.html">Properties</a>
-              <a class="dropdown-item" href="about.html">About</a>
-              <a class="dropdown-item" href="php/index-contact.html">Contact</a>
-            </div>
-            </div>
-            <a  id="about" class="flex-sm-fill text-sm-center nav-link" href="about-firstview-lettings.html">About</a>
-            <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.html">Contact</a>
-        </nav>
+        </div>
+        <div class="dropdown">
+          <button class="btn dropdown-toggle " type="button" id="services-tab" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu &#9776;
+          </button>
+          <div class="dropdown-menu" aria-labelledby="services-tab">
+            <a class="dropdown-item" href="firstview-lettings-home.html">Home</a>
+            <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
+            <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
+            <a class="dropdown-item" href="properties.html">Properties</a>
+            <a class="dropdown-item" href="about.html">About</a>
+            <a class="dropdown-item" href="php/index-contact.php">Contact</a>
+          </div>
+        </div>
+        <a id="about" class="flex-sm-fill text-sm-center nav-link" href="about-firstview-lettings.html">About</a>
+        <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.php">Contact</a>
+      </nav>
     </header>
 
 
@@ -115,13 +115,14 @@
           <br>
         </h2>
       </div>
-  </div>
+
   </main>
+</div>
 
   <footer class="main-footer">
     <div>
       <span>Enquiries</span><br>
-      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="tel:07834342897">07834 342897</a><br>
       <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
     </div>
     <span>
@@ -131,12 +132,12 @@
       367B Church Rd, Frampton Cotterell,<br>
       Bristol, BS36 2AQ
     </span>
-    <span id="copy">&copy Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
+    <span id="copy">&copy; Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
     <div>
       <a href="legal.html" id="legal">Legal Notices</a><br>
-      <a href="">Privacy Policy</a>
+      <a href="sitemap.html">Sitemap</a>
     </div>
-    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    <span class="webdev">Created by Firstview Lettings Ltd</span>
   </footer>
   <script>
     var d = new Date();
