--- a/about-firstview-lettings.html
+++ b/about-firstview-lettings.html
@@ -7,9 +7,11 @@
   <meta name="author" content="Ross Kendall-Selwyn">
   <meta name="description" content="Firstview Lettings Ltd offers homes and apartments to rent in Derby and Nottingham and acts as matchmaker for tenants and landlords.">
   <meta name="keywords" content="About Firstview Lettings Ltd, Property Management Services, Property Management companies, Landlord services, Best property management companies, Nottingham, Derby.">
+  <link rel="stylesheet" href="stylesheets/normalize.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Raleway:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
   <title>About Us | Firstview Lettings Ltd</title>
   <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
 </head>
@@ -25,15 +27,15 @@
       I accept
     </button>
   </div>
-  <header style="display:flex">
-    <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
+  <header>
+    <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt=""></a>
     </div>
     <nav class="nav flex-row flex-sm-row">
-      <a class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
+      <a id="home" class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
       <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
 
       <div class="btn-group" id="tenants">
-        <a role="button" type="button" class="btn" href="tenant-services.html">Tenants</a>
+        <a role="button" class="btn" href="tenant-services.html">Tenants</a>
         <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="sr-only">Toggle Dropdown</span>
         </button>
@@ -43,7 +45,7 @@
         </div> -->
       </div>
       <div class="btn-group" id="landlords">
-        <a role="button" type="button" class="btn" href="landlord-services.html">Landlords</a>
+        <a role="button" class="btn" href="landlord-services.html">Landlords</a>
         <!-- <a role="button" type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="sr-only">Toggle Dropdown</span>
         </a>
@@ -59,20 +61,21 @@
           Menu &#9776;
         </button>
         <div class="dropdown-menu" aria-labelledby="services-tab">
+          <a class="dropdown-item" href="firstview-lettings-home.html">Home</a>
           <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
           <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
           <a class="dropdown-item" href="properties.html">Properties</a>
           <a class="dropdown-item" href="about.html">About</a>
-          <a class="dropdown-item" href="php/index-contact.html">Contact</a>
+          <a class="dropdown-item" href="php/index-contact.php">Contact</a>
         </div>
       </div>
       <a id="about" class="flex-sm-fill text-sm-center nav-link" href="about-firstview-lettings.html">About</a>
-      <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.html">Contact</a>
+      <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.php">Contact</a>
     </nav>
   </header>
   <main>
     <h1 class="subp-title">About Firstview Lettings Ltd.</h1>
-    <section class="cstandard">
+    <div class="cstandard">
       <p>Since 2004 we've been providing residential letting mangement services to landlords and tenants in the South West of England. In this time we've helped landlords find their dream tenants, tenants find their dream landlords and managed
         letting management associations.</p>
       <p>More recently our focus has turned to serving the beautiful rural areas of Notinghamshire and Derbyshire, using the experience we've gained in the last 14 years.</p>
@@ -83,16 +86,16 @@
         looking
         for new tenants or experienced property management, you've come to the right place.</p>
       <div class="btn_group">
-        <button type="button" class="about-btn">Landlords</button>
-        <button type="button" class="about-btn">Tenants</button>
-        <button type="button" class="about-btn">Contact</button>
+        <a role="button" href="landlord-services.html" class="about-btn">Landlords</a>
+        <a role="button" href="tenant-services.html" class="about-btn">Tenants</a>
+        <a role="button" href="php/index-contact.php" class="about-btn">Contact</a>
       </div>
-    </section>
+    </div>
   </main>
   <footer class="main-footer">
     <div>
       <span>Enquiries</span><br>
-      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="tel:07834342897">07834 342897</a><br>
       <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
     </div>
     <span>
@@ -102,12 +105,12 @@
       367B Church Rd, Frampton Cotterell,<br>
       Bristol, BS36 2AQ
     </span>
-    <span id="copy">&copy Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
+    <span id="copy">&copy; Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
     <div>
       <a href="legal.html" id="legal">Legal Notices</a><br>
-      <a href="legal.html">Privacy Policy</a>
+      <a href="sitemap.html">Sitemap</a>
     </div>
-    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    <span class="webdev">Created by Firstview Lettings Ltd</span>
   </footer>
   <script>
     var d = new Date();
