--- a/lakeview-apartments.html
+++ b/lakeview-apartments.html
@@ -7,9 +7,10 @@
   <meta name="author" content="Ross Kendall-Selwyn">
   <meta name="description" content="Lakeview apartment to let in Fishponds, Bristol.">
   <meta name="keywords" content="Homes to rent, flats to rent, flats to let, flats in Bristol, flats in fishponds, rental properties bristol, Nottingham, Derby, East Midlands, homes to rent East Midlands.">
-  <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
   <title>Lakeview Apartments | Firstview Lettings Ltd</title>
   <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
 </head>
@@ -17,22 +18,22 @@
 <body>
   <div class="wrap">
     <div class="cookie-container">
-    <p>
-      We use cookies in this website for tracking and performance purposes. To find out more, read our
-      <a href="legal.html">Legal Notice</a>. By continuing to use this site, you consent to our use of cookies.
-    </p>
+      <p>
+        We use cookies in this website for tracking and performance purposes. To find out more, read our
+        <a href="legal.html">Legal Notice</a>. By continuing to use this site, you consent to our use of cookies.
+      </p>
 
-    <button class="cookie-btn">
-      I accept
-    </button>
-  </div>
-    <header style="display:flex">
+      <button class="cookie-btn">
+        I accept
+      </button>
+    </div>
+    <header>
       <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt="firstview lettings logo"></a></div>
       <nav class="nav flex-row flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
+        <a id="home" class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
         <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
         <div id="tenants" class="btn-group">
-          <a type="button" class="btn" href="tenant-services.html">Tenants</a>
+          <a role="button" class="btn" href="tenant-services.html">Tenants</a>
           <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
   <span class="sr-only">Toggle Dropdown</span>
 </button>
@@ -42,7 +43,7 @@
 </div> -->
         </div>
         <div id="landlords" class="btn-group">
-          <a type="button" class="btn" href="landlord-services.html">Landlords</a>
+          <a role="button" class="btn" href="landlord-services.html">Landlords</a>
           <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
@@ -54,19 +55,20 @@
           </div> -->
         </div>
         <div class="dropdown">
-          <a id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu &#9776;
-          </a>
+          </button>
           <div class="dropdown-menu" aria-labelledby="services-tab">
+            <a class="dropdown-item" href="firstview-lettings-home.html">Home</a>
             <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
             <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
-            <a class="dropdown-item" href="tenant-services.html">Properties</a>
-            <a class="dropdown-item" href="tenant-services.html">About</a>
-            <a class="dropdown-item" href="tenant-services.html">Contact</a>
+            <a class="dropdown-item" href="properties.html">Properties</a>
+            <a class="dropdown-item" href="about-firstview-lettings.html">About</a>
+            <a class="dropdown-item" href="php/index-contact.php">Contact</a>
           </div>
         </div>
         <a id="about" class="flex-sm-fill text-sm-center nav-link" href="about-firstview-lettings.html">About</a>
-        <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.html">Contact</a>
+        <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.php">Contact</a>
       </nav>
     </header>
 
@@ -112,7 +114,7 @@
             </ul>
 
             <div class="property-cta">
-              <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834 342897">07834 342897</a>
+              <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834342897">07834 342897</a>
             </div>
           </div>
 
@@ -147,9 +149,9 @@
         <div class="property-info">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Dimensions</a>
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#dimensions" role="tab" aria-controls="home" aria-selected="true">Dimensions</a>
             </li>
-            <li class="nav-item hide-sm" role="presentation">
+            <li class="nav-item" role="presentation">
               <a class="nav-link" id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="features" aria-selected="false">Features</a>
             </li>
             <li class="nav-item" role="presentation">
@@ -158,7 +160,7 @@
 
           </ul>
           <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="tab-pane fade show active" id="dimensions" role="tabpanel" aria-labelledby="home-tab">
               <ul>
                 <li>Lounge/Diner 14'5" x 11'9" (4.4m x 3.6m)</li>
                 <li>Bedroom 10'9" x 8'8" (3.28m x 2.64m)</li>
@@ -201,7 +203,7 @@
             within a 30 minute drive on junction 16 of the M5.</p>
 
         </div>
-        <span class="property-info"><a href="properties.html">View all properties</a></span>
+        <span><a class="about-btn" href="properties.html">View all properties</a></span>
 
       </div>
     </main>
@@ -210,7 +212,7 @@
   <footer class="main-footer">
     <div>
       <span>Enquiries</span><br>
-      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="tel:07834342897">07834 342897</a><br>
       <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
     </div>
     <span>
@@ -220,12 +222,12 @@
       367B Church Rd, Frampton Cotterell,<br>
       Bristol, BS36 2AQ
     </span>
-    <span id="copy">&copy Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
+    <span id="copy">&copy; Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
     <div>
       <a href="legal.html" id="legal">Legal Notices</a><br>
-      <a href="">Privacy Policy</a>
+      <a href="sitemap.html">Sitemap</a>
     </div>
-    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    <span class="webdev">Created by Firstview Lettings Ltd</span>
   </footer>
   <script>
     var d = new Date();
