--- a/marine-gardens-apt.html
+++ b/marine-gardens-apt.html
@@ -7,9 +7,10 @@
   <meta name="author" content="Ross Kendall-Selwyn">
   <meta name="description" content="Marine gardens apartments to let in Coleford. Great one bedroom apartment close to local amenities.">
   <meta name="keywords" content="Homes to rent, flats to rent, flats to let, flats in Gloucester, flats in Coleford, rental properties Gloucester, Nottingham, Derby, East Midlands, homes to rent East Midlands.">
-  <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
   <title>Marine Gardens Apartments | Firstview Lettings Ltd</title>
   <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
 </head>
@@ -26,13 +27,13 @@
         I accept
       </button>
     </div>
-    <header style="display:flex">
+    <header>
       <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt="firstview lettings logo"></a></div>
       <nav class="nav flex-row flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
+        <a id="home" class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
         <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
         <div id="tenants" class="btn-group">
-          <a type="button" class="btn" href="tenant-services.html">Tenants</a>
+          <a role="button" class="btn" href="tenant-services.html">Tenants</a>
           <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
@@ -42,7 +43,7 @@
           </div> -->
         </div>
         <div id="landlords" class="btn-group">
-          <a type="button" class="btn" href="landlord-services.html">Landlords</a>
+          <a role="button" class="btn" href="landlord-services.html">Landlords</a>
           <!-- <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
@@ -54,10 +55,11 @@
           </div> -->
         </div>
         <div class="dropdown">
-          <a id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu &#9776;
-          </a>
+          </button>
           <div class="dropdown-menu" aria-labelledby="services-tab">
+            <a class="dropdown-item" href="firstview-lettings-home.html">Home</a>
             <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
             <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
             <a class="dropdown-item" href="properties.html">Properties</a>
@@ -108,7 +110,7 @@
               <li>Private residence in peaceful location</li>
             </ul>
             <div class="property-cta">
-              <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834 342897">07834 342897</a>
+              <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834342897">07834 342897</a>
             </div>
           </div>
         </div>
@@ -142,10 +144,10 @@
         <div class="property-info">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Dimensions</a>
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#dimensions" role="tab" aria-controls="dimensions" aria-selected="true">Dimensions</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link hide-sm" id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="features" aria-selected="false">Features</a>
+              <a class="nav-link " id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="features" aria-selected="false">Features</a>
             </li>
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Conditions</a>
@@ -153,7 +155,7 @@
 
           </ul>
           <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="tab-pane fade show active" id="dimensions" role="tabpanel" aria-labelledby="home-tab">
               <ul>
                 <li>Lounge 11'6" x 14'0" (3.50m x 4.27m)</li>
                 <li>Bedroom 8'6" x 10'8" (2.60m x 3.25m)</li>
@@ -200,7 +202,7 @@
   <footer class="main-footer">
     <div>
       <span>Enquiries</span><br>
-      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="tel:07834342897">07834 342897</a><br>
       <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
     </div>
     <span>
@@ -210,12 +212,12 @@
       367B Church Rd, Frampton Cotterell,<br>
       Bristol, BS36 2AQ
     </span>
-    <span id="copy">&copy Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
+    <span id="copy">&copy; Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
     <div>
       <a href="legal.html" id="legal">Legal Notices</a><br>
-      <a href="">Privacy Policy</a>
+      <a href="sitemap.html">Sitemap</a>
     </div>
-    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    <span class="webdev">Created by Firstview Lettings Ltd</span>
   </footer>
   <script>
     var d = new Date();
