--- a/properties.html
+++ b/properties.html
@@ -8,9 +8,10 @@
   <meta name="description" content="Find affordable homes and flats to rent in Nottingham and Derby offered by Firstview Lettings ltd.">
   <meta name="keywords"
     content="Nottingham, Derby, Flats and apartment finder Nottingham, flats and apartment finder Derby, flats and apartments for rent Nottingham, flats and apartments for rent Derby, property to let, property to rent, professional lettings, flats, one bedroom flat, two bedroom apartment, letting management services, flats and apartments property management, homes to rent, flats to rent.">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Properties | Firstview Lettings Ltd</title>
   <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
@@ -28,63 +29,41 @@
         I accept
       </button>
     </div>
-    <div class="cookie-container">
-      <p>
-        We use cookies in this website for tracking and performance purposes. To find out more, read our
-        <a href="legal.html">privacy policy</a>. By using this site you agree to the use of cookies.
-      </p>
-      <button class="cookie-btn">
-        I accept
-      </button>
-    </div>
-    <header style="display:flex">
+    <header >
       <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt="firstview lettings logo"></a></div>
       <nav class="nav flex-row flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
+        <a id="home" class="flex-sm-fill text-sm-center nav-link active" href="firstview-lettings-home.html">Home</a>
         <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
         <div id="tenants" class="btn-group">
-          <a type="button" class="btn" href="tenant-services.html">Tenants</a>
-          <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="tenancy_application.html">Tenancy Applications</a>
-            <a class="dropdown-item" href="tenant-enquiries.html">Tenant Enquiries</a>
-          </div> -->
+          <a role="button" class="btn" href="tenant-services.html">Tenants</a>
+
         </div>
         <div id="landlords" class="btn-group">
-          <a type="button" class="btn" href="landlord-services.html">Landlords</a>
-          <!-- <button type="button" class="btn  dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="tenancy_application.html">Tenancy Applications</a>
-            <a class="dropdown-item" href="tenant-introduction-service.html">Tenant Introduction Service</a>
-            <a class="dropdown-item" href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a>
-            <a class="dropdown-item" href="letting-management.html">Letting Management Service</a>
-          </div> -->
+          <a role="button" class="btn" href="landlord-services.html">Landlords</a>
+
         </div>
         <div class="dropdown">
-          <a id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button id="services-tab" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu &#9776;
-          </a>
+          </button>
           <div class="dropdown-menu" aria-labelledby="services-tab">
+            <a class="dropdown-item" href="firstview-lettings-home.html">Home</a>
             <a class="dropdown-item" href="landlord-services.html">Landlord Services</a>
             <a class="dropdown-item" href="tenant-services.html">Tenant Services</a>
             <a class="dropdown-item" href="#">Properties</a>
             <a class="dropdown-item" href="about-firstview-lettings.html">About</a>
-            <a class="dropdown-item" href="/php/index-contact.html">Contact</a>
+            <a class="dropdown-item" href="/php/index-contact.php">Contact</a>
           </div>
         </div>
         <a id="about" class="flex-sm-fill text-sm-center nav-link" href="about-firstview-lettings.html">About</a>
-        <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.html">Contact</a>
+        <a id="contact" class="hide-sm flex-sm-fill text-sm-center nav-link" href="php/index-contact.php">Contact</a>
       </nav>
     </header>
 
     <main>
       <h1 class="subp-title">Properties</h1>
       <h2 class="center cstandard">Our focus is serving the rural areas of Nottinghamshire and Derbyshire.<br>
-        Review our listings below, then register your interest for properties in your area.<br>
+        Review our listings below or <a href="php/index-contact.php">contact</a> us about properties in your area.<br>
         We'll take it from there.</h2>
       <div class="property-card">
         <img src="images/full-lakeview.jpg" alt="full size image of lakeview apartment">
@@ -104,7 +83,7 @@
       </div>
 
       <div class="property-card">
-        <img src="images/full-marine_gardens.gif">
+        <img src="images/full-marine_gardens.gif" alt="view of marine gardens from outside">
         <div>
           <h2 class="property-title"> Marine Gardens - Coleford - Forest of Dean</h2>
           <ul>
@@ -126,7 +105,7 @@
   <footer class="main-footer">
     <div>
       <span>Enquiries</span><br>
-      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="tel:07834342897">07834 342897</a><br>
       <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
     </div>
     <span>
@@ -136,12 +115,12 @@
       367B Church Rd, Frampton Cotterell,<br>
       Bristol, BS36 2AQ
     </span>
-    <span id="copy">&copy Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
+    <span id="copy">&copy; Firstview Lettings Ltd 2004-<span id="year"></span>.</span>
     <div>
       <a href="legal.html" id="legal">Legal Notices</a><br>
-      <a href="legal.html">Privacy Policy</a>
+      <a href="sitemap.html">Sitemap</a>
     </div>
-    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    <span class="webdev">Created by Firstview Lettings Ltd</span>
   </footer>
   <script>
     var d = new Date();
